prevent horizontal scrollbars

--- a/app/resources/sass/homepage.scss
+++ b/app/resources/sass/homepage.scss
@@ -61,7 +61,7 @@ body {
 
                 @apply w-5/6 pl-32 h-full relative;
                 overflow-y: scroll;
-                // overflow-x: hidden;
+                overflow-x: hidden;
 
                 .top-fader {
                     @apply sticky left-0 right-0 top-0 h-24;
